--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: IBCF.MTME
-Title: Item Based Collaborative Filterign For Multi-trait and Multi-environment Data.
+Title: Item Based Collaborative Filtering for Multi-Trait and Multi-Environment Data
 Version: 0.1
 Authors@R: c(person("Francisco Javier", "Luna-Vazquez", email = "frahik@gmail.com", role = c("aut", "cre")),
              person("Osval Antonio", "Montesinos-Lopez", email= "oamontes1@ucol.mx", role = c("aut", "res"))
              )
 Description: Needs a good description
+    very good description
 Depends: 
   R (>= 3.0.0)
 License: GPL-3 + file LICENSE
@@ -18,6 +19,7 @@ NeedsCompilation: no
 Collate:
   CrossValidation.R
   IBCF.R
+  IBCFYear.R
   methods.R
   Td2M.R
   Title.R
