--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ LazyData: true
 Type: Package
 RoxygenNote: 6.0.1
 URL: http://none.com
-BugReports: https://github.com/frahik/IBCFMTME
+BugReports: https://github.com/frahik/IBCF.MTME
 NeedsCompilation: no
 Collate:
   CrossValidation.R
