--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,10 @@ export(IBCF)
 export(IBCF.Years)
 export(getMatrixForm)
 export(getTidyForm)
-export(rec_itm_for_geno)
+importFrom(graphics,arrows)
+importFrom(graphics,axis)
+importFrom(graphics,barplot)
+importFrom(graphics,plot)
+importFrom(stats,cor)
+importFrom(stats,na.omit)
+importFrom(stats,sd)
