--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Version: 1.1-2
 Authors@R: c(person("Francisco Javier", "Luna-Vazquez", email = "frahik@gmail.com", role = c("aut", "cre")),
              person("Osval Antonio", "Montesinos-Lopez", email= "oamontes1@ucol.mx", role = c("aut", "res"))
              )
-Description: Needs a good description
-    very good description
+Description: This package was developed to implement the Item based collaborative filtering (IBCF) method for continues phenotypes in the context of plant breeding where data are collected for various traits that were studied in various environments. 
 Depends: 
   R (>= 3.0.0)
 License: GPL-3 + file LICENSE
@@ -13,8 +12,8 @@ Encoding: UTF-8
 LazyData: true
 Type: Package
 RoxygenNote: 6.0.1
-URL: http://none.com
-BugReports: https://github.com/frahik/IBCF.MTME
+URL: https://github.com/frahik/IBCF.MTME
+BugReports: https://github.com/frahik/IBCF.MTME/issues/new
 NeedsCompilation: no
 Collate:
   CrossValidation.R
