--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Authors@R: c(person("Francisco Javier", "Luna-Vazquez", email = "frahik@gmail.co
              person("Abelardo", "Montesinos-Lopez", role = "aut"),
              person("Jose", "Crossa", role = "aut"))
 Maintainer: Francisco Javier Luna-Vazquez <frahik@gmail.com>
-Description: This package was developed to implement the Item based collaborative filtering (IBCF) method for continues phenotypes in the context of plant breeding where data are collected for various traits that were studied in various environments. 
+Description: Implements the Item based collaborative filtering (IBCF) method for continues phenotypes in the context of plant breeding where data are collected for various traits that were studied in various environments proposed by Montesinos-López et al. (2017) <doi:10.1534/g3.117.300309>. 
 Depends: 
   R (>= 3.0.0)
-License: LGPL-3 + file LICENSE
+License: LGPL-3
 Encoding: UTF-8
 LazyData: true
 Type: Package
