--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(person("Francisco Javier", "Luna-Vazquez", email = "frahik@gmail.co
              person("Abelardo", "Montesinos-Lopez", role = "aut"),
              person("Jose", "Crossa", role = "aut"))
 Maintainer: Francisco Javier Luna-Vazquez <frahik@gmail.com>
-Description: Implements the Item based collaborative filtering (IBCF) method for continues phenotypes in the context of plant breeding where data are collected for various traits that were studied in various environments proposed by Montesinos-López et al. (2017) <doi:10.1534/g3.117.300309>. 
+Description: Implements the item based collaborative filtering (IBCF) method for continues phenotypes in the context of plant breeding where data are collected for various traits that were studied in various environments proposed by Montesinos-López et al. (2017) <doi:10.1534/g3.117.300309>. 
 Depends: 
   R (>= 3.0.0)
 License: LGPL-3
