--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: IBCF.MTME
 Title: Item Based Collaborative Filtering for Multi-Trait and Multi-Environment Data
-Version: 1.2-5
-Date: 2018-02-14
+Version: 1.3-1
+Date: 2018-05-28
 Authors@R: c(person("Francisco Javier", "Luna-Vazquez", email = "frahik@gmail.com", role = c("aut", "cre")),
              person("Osval Antonio", "Montesinos-Lopez", email= "oamontes1@ucol.mx", role = "aut"),
              person("Abelardo", "Montesinos-Lopez", role = "aut"),
@@ -21,6 +21,7 @@ NeedsCompilation: no
 Collate:
   CrossValidation.R
   IBCF.R
+  IBCFData.R
   IBCF.MTME.R
   IBCFYear.R
   methods.R
