--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(summary,IBCF)
 S3method(summary,IBCFY)
 export(CV.RandomPart)
 export(IBCF)
+export(IBCF.Data)
 export(IBCF.Years)
 export(getMatrixForm)
 export(getTidyForm)
