--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: IBCF.MTME
 Title: Item Based Collaborative Filtering for Multi-Trait and Multi-Environment Data
-Version: 1.3-2
+Version: 1.4-1
 Date: 2018-05-28
 Authors@R: c(person("Francisco Javier", "Luna-Vazquez", email = "frahik@gmail.com", role = c("aut", "cre")),
              person("Osval Antonio", "Montesinos-Lopez", email= "oamontes1@ucol.mx", role = "aut"),
@@ -14,7 +14,7 @@ License: LGPL-3
 Encoding: UTF-8
 LazyData: true
 Type: Package
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 URL: https://github.com/frahik/IBCF.MTME
 BugReports: https://github.com/frahik/IBCF.MTME/issues/new
 NeedsCompilation: no
@@ -30,7 +30,8 @@ Collate:
   Year_IBCF.R
 Imports:
   lsa,
-  tidyr
+  tidyr,
+  dplyr
 Suggests:
   testthat,
   knitr,
