--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(barplot,IBCFY)
 S3method(plot,IBCF)
+S3method(print,IBCF)
+S3method(print,IBCFY)
 S3method(summary,IBCF)
 S3method(summary,IBCFY)
 export(CV.RandomPart)
@@ -9,6 +11,12 @@ export(IBCF)
 export(IBCF.Years)
 export(getMatrixForm)
 export(getTidyForm)
+importFrom(dplyr,'%>%')
+importFrom(dplyr,funs)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate_if)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
@@ -16,3 +24,4 @@ importFrom(graphics,plot)
 importFrom(stats,cor)
 importFrom(stats,na.omit)
 importFrom(stats,sd)
+importFrom(utils,head)
