--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(graphics,plot)
+importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,na.omit)
 importFrom(stats,sd)
